--- a/tests/mock_ape.toml
+++ b/tests/mock_ape.toml
@@ -31,6 +31,9 @@ labels = {}
 
 bind = ":9145"
 
+# is exporter running in mock test mode
+use_mock_datasource = 1
+
 # metrics server timeout in seconds
 timeout = 10
 
