--- a/configs/ape.toml.template
+++ b/configs/ape.toml.template
@@ -1,4 +1,8 @@
 [Agent]
+# Metrics Serving modes
+PROMETHEUS = ${AGENT_PROMETHEUS}
+OTEL = ${AGENT_OTEL}
+
 # Exporter HTTPS (TLS) configuration
 # HTTPS between Prometheus and Exporter
 
@@ -36,6 +40,21 @@ use_mock_datasource = ${USE_MOCK_DATASOURCE}
 
 # metrics server timeout in seconds
 timeout = ${AGENT_TIMEOUT}
+
+# OTel service-name
+otel_service_name = "${AGENT_OTEL_APP_SERVICE_NAME}"
+
+# OTel Endpoint
+otel_endpoint = "${AGENT_OTEL_ENDPOINT}"
+
+# OTel headers
+otel_headers = "{${AGENT_OTEL_HEADERS}}"
+
+# OTel server-stat fetch interval (default 15, not recommended to to reduce this)
+otel_server_stat_fetch_interval = ${AGENT_OTEL_SERVER_STAT_FETCH_INTERVAL}
+
+# OTel metric push interval (default 60, not recommended to to reduce this)
+otel_push_interval = ${AGENT_OTEL_PUSH_INTERVAL}
 
 # Exporter logging configuration
 # Log file path (optional, logs to console by default)
