OM147 - system info

--- a/configs/ape.toml
+++ b/configs/ape.toml
@@ -60,6 +60,9 @@ otel_server_stat_fetch_interval = 15
 # OTel metric push interval (default 60, not recommended to to reduce this)
 otel_push_interval = 60
 
+# support system statistics also
+refresh_system_stats = false
+
 # Exporter logging configuration
 # Log file path (optional, logs to console by default)
 # Level can be info|warning,warn|error,err|debug|trace ('info' by default)
