--- a/configs/ape.toml.template
+++ b/configs/ape.toml.template
@@ -33,8 +33,8 @@ key_file_passphrase = "${AGENT_KEY_FILE_PASSPHRASE}"
 # labels to add to the prometheus metrics for e.g. labels={zone="asia-south1-a", platform="google compute engine"}
 labels = {${METRIC_LABELS}}
 
-# collect cloud region, location, zone etc.,
-fetch_cloud_info = ${AGENT_FETCH_CLOUD_INFO}
+# mention cloud provider (aws, gcp, azure ) so exporter collects few details like region, zone etc.,
+cloud_provider = ${AGENT_CLOUD_PROVIDER}
 
 bind = "${AGENT_BIND_HOST}:${AGENT_BIND_PORT}"
 
