--- a/configs/ape.toml
+++ b/configs/ape.toml
@@ -66,7 +66,7 @@ bind = ":9145"
 basic_auth_username = ""
 basic_auth_password = ""
 
-[OTEL]
+[Agent.Otel]
 
 # OTel service-name
 service_name = "aerospike-server-metrics-service"
