--- a/configs/ape.toml
+++ b/configs/ape.toml
@@ -1,7 +1,7 @@
 [Agent]
 # Metrics Serving modes
 PROMETHEUS = true
-OTEL = false
+OPEN_TELEMETRY = false
 
 # labels to add to the prometheus metrics for e.g. labels={zone="asia-south1-a", platform="google compute engine"}
 labels = {latitude="0",longitude="0"}
@@ -18,7 +18,7 @@ timeout = 10
 # support system statistics also
 refresh_system_stats = false
 
-[Agent.Prom]
+[Agent.PROM]
 
 # Exporter logging configuration
 # Log file path (optional, logs to console by default)
@@ -66,7 +66,7 @@ bind = ":9145"
 basic_auth_username = ""
 basic_auth_password = ""
 
-[Agent.OpenTel]
+[Agent.OTEL]
 
 # OTel service-name
 service_name = "aerospike-server-metrics-service"
