OM147 - updated README

--- a/configs/ape.toml
+++ b/configs/ape.toml
@@ -62,6 +62,7 @@
       basic_auth_password = ""
 
 [Agent.OpenTelemetry]
+      # NOTE: currently supports only gRPC endpoints
 
       # OTel service-name
       service_name = "aerospike-server-metrics-service"
