Disable CGO since it isn't used.
This change will make the binaries work on any distro, as long as it's linux and the amd64/arm64 architecture matches, removing the need to have a separate binary for each distribution and distro version (no more libc requirement). Disabling CGO does not have an effect on this application functionality. It does however mean that a single amd64-compiled binary will work on every amd64 linux distribution and version.

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -46,4 +46,6 @@ ifdef GOARCH
 GO_ENV_VARS += GOARCH=$(GOARCH)
 endif
 
+GO_ENV_VARS += CGO_ENABLED=0
+
 DOCKER_MULTI_ARCH_PLATFORMS = linux/amd64,linux/arm64
