OM-186 - 7.1 metrics support
added support for 7.1 guage metrics

--- a/configs/gauge_stats_list.toml
+++ b/configs/gauge_stats_list.toml
@@ -213,11 +213,21 @@ namespace_gauge_stats =[
 	"storage-engine.device.shadow_write_q",
 	"storage-engine.device.used_bytes",
 	"storage-engine.device.write_q",
+	"storage-engine.device.age",
 	"storage-engine.file.defrag_q",
 	"storage-engine.file.free_wblocks",
 	"storage-engine.file.shadow_write_q",
 	"storage-engine.file.used_bytes",
 	"storage-engine.file.write_q",	
+	"storage-engine.file.age",
+	"storage-engine.stripe.defrag_q",
+	"storage-engine.stripe.free_wblocks",
+	"storage-engine.stripe.shadow_write_q",
+	"storage-engine.stripe.used_bytes",
+	"storage-engine.stripe.write_q",	
+	"storage-engine.stripe.age",
+	"storage-engine.stripe.backing_write_q",
+	"migrate_fresh_partitions",
 	"tombstones",
 	"truncate_lut",
 	"unavailable_partitions",
