OM-194 - updated gauge list
modified gauge list to include indexes_memory_used_pct

--- a/configs/gauge_stats_list.toml
+++ b/configs/gauge_stats_list.toml
@@ -244,6 +244,7 @@ namespace_gauge_stats =[
 	"data_used_pct",
 	"index_mounts_used_pct",
 	"index_used_bytes",
+	"indexes_memory_used_pct",
 	"set_index_used_bytes",
 	"sindex_mounts_used_pct",
 	"sindex_used_bytes",
