--- a/configs/gauge_stats_list.toml
+++ b/configs/gauge_stats_list.toml
@@ -255,5 +255,9 @@ namespace_gauge_stats =[
 # System Info Gauge metrics list
 #
 system_info_gauge_stats = [
-	"",
+	"allocated",
+	"shmem_bytes",
+	"swap_cached_bytes",
+	"tcp_activeopens",
+	"tcp_currestab",
 ]
