--- a/.github/workflows/build_release_artifacts.yaml
+++ b/.github/workflows/build_release_artifacts.yaml
@@ -18,6 +18,7 @@ permissions:
 
 jobs:
       
+    # this job generates deb and rpm for amd64/x86 arch
     amd64_job:
       runs-on: ubuntu-latest
       steps:
@@ -63,6 +64,7 @@ jobs:
                gh release upload "$TAG_NAME" "$file"
              done   
 
+    # this job generates deb and rpm for arm64 arch
     arm64_job:
       runs-on: ubuntu-latest
       steps:
